--- a/hello-cargo/Cargo.toml
+++ b/hello-cargo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_cargo"
+name = "hello-cargo"
 version = "0.1.0"
 authors = ["Oliver Chalk <oliverchalk245@gmail.com"]
 edition = "2018"
