exercise: smart pointers

--- a/guessing-game/Cargo.toml
+++ b/guessing-game/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "guessing-game"
+name = "guessinggame"
 version = "0.1.0"
 authors = ["Oliver Chalk <oliverchalk245@gmail.com>"]
 edition = "2018"
